WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42638
[Qt] Fix WebKit2 build
https://bugs.webkit.org/show_bug.cgi?id=42638
Summary
[Qt] Fix WebKit2 build
Balazs Kelemen
Reported
2010-07-20 06:37:57 PDT
The build of the qt port of webkit2 is broken and needs update.
Attachments
proposed patch
(5.20 KB, patch)
2010-07-20 06:44 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
proposed patch - fixed fix
(5.25 KB, patch)
2010-07-20 08:06 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
proposed patch
(2.60 KB, patch)
2010-07-22 09:44 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2010-07-20 06:44:07 PDT
Created
attachment 62068
[details]
proposed patch
WebKit Review Bot
Comment 2
2010-07-20 06:47:26 PDT
Attachment 62068
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit2/UIProcess/qt/WebContextQt.cpp:26: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Balazs Kelemen
Comment 3
2010-07-20 08:06:24 PDT
Created
attachment 62077
[details]
proposed patch - fixed fix
WebKit Review Bot
Comment 4
2010-07-20 08:08:19 PDT
Attachment 62077
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit2/UIProcess/qt/WebContextQt.cpp:26: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Balazs Kelemen
Comment 5
2010-07-22 09:24:58 PDT
Comment on
attachment 62077
[details]
proposed patch - fixed fix The patch has been outdated, I will update soon.
Balazs Kelemen
Comment 6
2010-07-22 09:44:34 PDT
Created
attachment 62310
[details]
proposed patch
Andras Becsi
Comment 7
2010-07-22 10:01:54 PDT
Comment on
attachment 62310
[details]
proposed patch Buildfix committed in revision 63898.
Andras Becsi
Comment 8
2010-07-22 10:04:26 PDT
Issue fixed, closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug