WebCore: Ureviewed build fix.

Patch by Balazs Kelemen <kb@inf.u-szeged.hu> on 2010-07-22
[Qt] Fix WebKit2 build

https://bugs.webkit.org/show_bug.cgi?id=42638

* WebCore.pri:
* WebCore.pro:

WebKit2: Unreviewed build fix.

Patch by Balazs Kelemen <kb@inf.u-szeged.hu> on 2010-07-22
[Qt] Fix WebKit2 build

https://bugs.webkit.org/show_bug.cgi?id=42638

* UIProcess/API/qt/qwkpage_p.h:
(QWKPagePrivate::setCursor): Added empty implementation.



Canonical link: https://commits.webkit.org/54735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63898 268f45cc-cd09-0410-ab3c-d52691b4dbfc