WebKit2/UIProcess/API/qt/qwkpage_p.h
@@ -42,6 +42,7 @@ public:
 
     virtual void processDidExit() {}
     virtual void processDidRevive() {}
+    virtual void setCursor(const WebCore::Cursor&) {}
     virtual void takeFocus(bool direction) {}
     virtual void toolTipChanged(const WebCore::String&, const WebCore::String&);
 
